[tool.poetry]
name = "graftfailure"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"
xgboost = "^1.7.5"
xgbse = "^0.2.3"
seaborn = "^0.12.2"
pandas = "^2.0.1"
scikit-learn = "^1.2.2"
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
